package com.allegaeon.catworld.model;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.FetchType;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.OneToOne;
import jakarta.persistence.Table;
import jakarta.validation.constraints.DecimalMin;
import jakarta.validation.constraints.Digits;
import jakarta.validation.constraints.NotNull;
import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;

import java.math.BigDecimal;
import java.time.Instant;
import java.util.UUID;

@Getter
@NoArgsConstructor(access = AccessLevel.PROTECTED)
@AllArgsConstructor
@Entity
@Builder
@Table(name = "stay_pricing_decisions")
public class StayPricingDecision {

    @Id
    @GeneratedValue(strategy = GenerationType.UUID)
    private UUID id;

    @Column(nullable = false, updatable = false)
    private UUID stayId;

    @Column(precision = 19, scale = 0, updatable = false)
    @DecimalMin(value = "0", inclusive = false)
    @Digits(integer = 19, fraction = 0)
    private BigDecimal retainedNightlyRate;
    @Column(nullable = false, updatable = false) private boolean arrivalTransferRequired;
    @Column(nullable = false, updatable = false) private boolean departureTransferRequired;
    @Column(precision = 19, scale = 0, updatable = false) private BigDecimal retainedTransferRate;
    @Column(nullable = false, updatable = false) private boolean transferWaived;

    @Column(updatable = false)
    private Long previousNumberOfNights;

    @Column(nullable = false, updatable = false)
    private long newNumberOfNights;

    @Column(precision = 19, scale = 0, updatable = false)
    @DecimalMin("0")
    @Digits(integer = 19, fraction = 0)
    private BigDecimal previousAgreedAmount;

    @Column(nullable = false, precision = 19, scale = 0, updatable = false)
    @NotNull
    @DecimalMin("0")
    @Digits(integer = 19, fraction = 0)
    private BigDecimal newAgreedAmount;

    @ManyToOne(fetch = FetchType.LAZY, optional = false)
    @JoinColumn(name = "decided_by_id", nullable = false, updatable = false)
    private UserAccount decidedBy;

    @Column(nullable = false, updatable = false)
    private Instant decidedAt;

    @Column(columnDefinition = "TEXT", updatable = false)
    private String reason;

    @OneToOne(fetch = FetchType.LAZY)
    @JoinColumn(
            name = "sensitive_context_id",
            updatable = false,
            unique = true
    )
    private SensitiveStayContext sensitiveContext;
}
