package com.allegaeon.catworld.model;

public enum UserRole {
    ADMIN,
    STAFF
}
