@startuml
skinparam classAttributeIconSize 0

package "catworld.domain" {

  abstract class Auditable {
    +Instant createdAt
    +Instant updatedAt
  }

  class Owner extends Auditable {
    +UUID id
    +String fullName  <<NotNull>>
    +String address
    +String primaryPhone  <<NotNull>>
    +String secondaryPhone
    +String secondaryPhoneName
    +String instagram
    +String facebook
    +String notes
    +UserAccount createdBy  <<NotNull>>
  }

  class Vet extends Auditable {
    +UUID id
    +String name  <<NotNull>>
    +String address
    +String phoneNumber
    +String registrationNumber
    +String notes
    +UserAccount createdBy  <<NotNull>>
  }

  enum Sex {
    MALE
    FEMALE
  }

  class Cat extends Auditable {
    +UUID id
    +String name  <<NotNull>>
    +LocalDate birthDate  <<NotNull>>
    +Sex sex  <<NotNull>>
    +String breed
    +String coat
    +String color
    +String foodBrand
    +String litterBrand
    +String personality
    +String notes
    +String lastInternalDewormerName
    +LocalDate lastInternalDewormingDate
    +String lastExternalDewormerName
    +LocalDate lastExternalDewormingDate
    +LocalDate lastTripleFelineDate
    +LocalDate lastRabiesDate
    +UserAccount createdBy  <<NotNull>>
  }

  class CatPhoto {
    +UUID catId <<Id,FK>>
    +byte[] content <<MEDIUMBLOB,NotNull>>
    +int width
    +int height
    +int byteSize
    +String sha256
  }

  enum StayStatus <<computed>> {
    RESERVED
    CHECKED_IN
    CHECKED_OUT
    CANCELLED
  }

  class Stay extends Auditable {
    +UUID id
    +LocalDateTime startAt  <<NotNull>>
    +LocalDateTime endAt    <<NotNull>>
    +LocalDateTime cancelledAt
    +String notes
    +BigDecimal retainedNightlyRate  <<Decimal(19,0),Nullable>>
    +boolean arrivalTransferRequired  <<NotNull>>
    +boolean departureTransferRequired  <<NotNull>>
    +BigDecimal retainedTransferRate  <<Decimal(19,0),Nullable>>
    +boolean transferWaived  <<NotNull>>
    +BigDecimal agreedAmount  <<Decimal(19,0),Nullable>>
    +StayStatus status  <<Transient/Computed>>
    +UserAccount createdBy  <<NotNull>>
  }

  class StayCat {
    +Stay stay
    +Cat cat
  }

  enum UserRole {
    ADMIN
    STAFF
  }

  class UserAccount extends Auditable {
    +UUID id
    +String username  <<NotNull,Unique>>
    +String passwordHash  <<NotNull>>
    +UserRole role  <<NotNull>>
    +boolean enabled  <<NotNull>>
  }

  enum NightlyReferenceRateKey {
    ONE_CAT
    ONE_CAT_7_TO_14
    ONE_CAT_15_TO_29
    ONE_CAT_30_PLUS
    TWO_CATS
    THREE_PLUS_CATS
  }

  class NightlyReferenceRate extends Auditable {
    +NightlyReferenceRateKey key  <<Id,NotNull>>
    +BigDecimal nightlyRate  <<Decimal(19,0),Nullable>>
  }

  class NightlyReferenceRateChange {
    +UUID id
    +NightlyReferenceRateKey key  <<NotNull,Immutable>>
    +BigDecimal previousNightlyRate  <<Decimal(19,0),Nullable,Immutable>>
    +BigDecimal newNightlyRate  <<Decimal(19,0),Nullable,Immutable>>
    +UserAccount changedBy  <<NotNull,Immutable>>
    +Instant changedAt  <<NotNull,Immutable>>
  }

  class TransferRate {
    +Long id  <<Id,Canonical=1>>
    +BigDecimal transferRate  <<Decimal(19,0),Nullable>>
  }

  class StayPricingDecision {
    +UUID id
    +UUID stayId  <<NotNull,Immutable>>
    +BigDecimal retainedNightlyRate  <<Decimal(19,0),Nullable,Immutable>>
    +boolean arrivalTransferRequired  <<NotNull,Immutable>>
    +boolean departureTransferRequired  <<NotNull,Immutable>>
    +BigDecimal retainedTransferRate  <<Decimal(19,0),Nullable,Immutable>>
    +boolean transferWaived  <<NotNull,Immutable>>
    +Long previousNumberOfNights  <<Nullable,Immutable>>
    +long newNumberOfNights  <<NotNull,Immutable>>
    +BigDecimal previousAgreedAmount  <<Decimal(19,0),Nullable,Immutable>>
    +BigDecimal newAgreedAmount  <<Decimal(19,0),NotNull,Immutable>>
    +UserAccount decidedBy  <<NotNull,Immutable>>
    +Instant decidedAt  <<NotNull,Immutable>>
    +String reason  <<Nullable,Immutable>>
    +SensitiveStayContext sensitiveContext  <<Nullable,Immutable>>
  }

  class StayAgreedAmountCorrection {
    +UUID id
    +UUID stayId  <<NotNull,Immutable>>
    +BigDecimal previousAgreedAmount  <<Decimal(19,0),Nullable,Immutable>>
    +BigDecimal newAgreedAmount  <<Decimal(19,0),NotNull,Immutable>>
    +UserAccount decidedBy  <<NotNull,Immutable>>
    +Instant decidedAt  <<NotNull,Immutable>>
    +String reason  <<NotBlank,Immutable>>
    +SensitiveStayContext sensitiveContext  <<Nullable,Immutable>>
  }

  class StayPayment extends Auditable {
    +UUID id
    +Stay stay  <<NotNull,Immutable>>
    +BigDecimal amount  <<Decimal(19,0),Positive>>
    +LocalDate paymentDate  <<NotNull,Immutable>>
    +String note  <<Nullable,Immutable>>
    +boolean annulled  <<NotNull,Terminal>>
    +UserAccount registeredBy  <<NotNull,Immutable>>
  }

  class StayPaymentEdit {
    +UUID id
    +UUID stayId  <<NotNull,Immutable>>
    +UUID paymentId  <<NotNull,Immutable>>
    +BigDecimal previousAmount  <<Decimal(19,0),Positive,Immutable>>
    +BigDecimal newAmount  <<Decimal(19,0),Positive,Immutable>>
    +UserAccount editedBy  <<NotNull,Immutable>>
    +Instant editedAt  <<NotNull,Immutable>>
    +String reason  <<NotBlank,Immutable>>
    +SensitiveStayContext sensitiveContext  <<Nullable,Immutable>>
    +LocalDate paymentDate  <<Nullable,Immutable>>
    +UserAccount registeredBy  <<Nullable,Immutable>>
    +Instant registeredAt  <<Nullable,Immutable>>
  }

  class StayPaymentAnnulment {
    +UUID id
    +UUID stayId  <<NotNull,Immutable>>
    +UUID paymentId  <<NotNull,Unique,Immutable>>
    +UserAccount annulledBy  <<NotNull,Immutable>>
    +Instant annulledAt  <<NotNull,Immutable>>
    +String reason  <<NotBlank,Immutable>>
    +SensitiveStayContext sensitiveContext  <<Nullable,Immutable>>
    +BigDecimal amount  <<Decimal(19,0),Nullable,Immutable>>
    +LocalDate paymentDate  <<Nullable,Immutable>>
    +UserAccount registeredBy  <<Nullable,Immutable>>
    +Instant registeredAt  <<Nullable,Immutable>>
  }

  class SensitiveStayContext {
    +UUID id
    +UUID stayId  <<NotNull,Immutable>>
    +UUID ownerId  <<NotNull,Immutable>>
    +String ownerFullName  <<NotBlank,Immutable>>
    +LocalDateTime stayStartAt  <<NotNull,Immutable>>
    +LocalDateTime stayEndAt  <<NotNull,Immutable>>
    +LocalDateTime stayCancelledAt  <<Nullable,Immutable>>
  }

  class SensitiveStayContextCat {
    +UUID contextId  <<PK,Immutable>>
    +UUID catId  <<PK,Immutable>>
    +String catName  <<NotBlank,Immutable>>
  }

  class StayPaymentRemoval {
    +UUID id
    +UUID stayId  <<NotNull,Immutable>>
    +UUID paymentId  <<NotNull,Unique,Immutable>>
    +BigDecimal amount  <<Decimal(19,0),Positive,Immutable>>
    +LocalDate paymentDate  <<NotNull,Immutable>>
    +String paymentNote  <<Nullable,Immutable>>
    +boolean annulled  <<NotNull,Immutable>>
    +UserAccount registeredBy  <<NotNull,Immutable>>
    +Instant registeredAt  <<NotNull,Immutable>>
    +UserAccount removedBy  <<NotNull,Immutable>>
    +Instant removedAt  <<NotNull,Immutable>>
    +String reason  <<NotBlank,Immutable>>
  }

  Owner "1" o-- "0..*" Cat : owns >
  Cat "1" *-- "0..1" CatPhoto : database-owned photo >
  Vet   "0..1" o-- "0..*" Cat : treats >
  Owner "1" o-- "0..*" Stay : books >
  Stay  "1" *-- "1..*" StayCat : includes >
  Cat   "1" o-- "0..*" StayCat : participates >
  UserAccount "1" <-- "0..*" Owner : createdBy
  UserAccount "1" <-- "0..*" Cat : createdBy
  UserAccount "1" <-- "0..*" Vet : createdBy
  UserAccount "1" <-- "0..*" Stay : createdBy
  NightlyReferenceRateKey "1" <-- "1" NightlyReferenceRate : key
  NightlyReferenceRateKey "1" <-- "0..*" NightlyReferenceRateChange : key
  UserAccount "1" <-- "0..*" NightlyReferenceRateChange : changedBy
  UserAccount "1" <-- "0..*" StayPricingDecision : decidedBy
  UserAccount "1" <-- "0..*" StayAgreedAmountCorrection : decidedBy
  Stay "1" *-- "0..*" StayPayment : payments
  UserAccount "1" <-- "0..*" StayPayment : registeredBy
  UserAccount "1" <-- "0..*" StayPaymentEdit : editedBy
  UserAccount "1" <-- "0..*" StayPaymentAnnulment : annulledBy
  SensitiveStayContext "1" *-- "0..*" SensitiveStayContextCat : cats
  SensitiveStayContext "1" <-- "0..1" StayPricingDecision : snapshot
  SensitiveStayContext "1" <-- "0..1" StayAgreedAmountCorrection : snapshot
  SensitiveStayContext "1" <-- "0..1" StayPaymentEdit : snapshot
  SensitiveStayContext "1" <-- "0..1" StayPaymentAnnulment : snapshot
  SensitiveStayContext "1" <-- "0..1" StayPaymentRemoval : snapshot
  UserAccount "1" <-- "0..*" StayPaymentRemoval : registeredBy
  UserAccount "1" <-- "0..*" StayPaymentRemoval : removedBy
}

note right of Stay
status is DYNAMIC:
- cancelledAt != null => CANCELLED
- now < startAt => RESERVED
- startAt <= now < endAt => CHECKED_IN
- now >= endAt => CHECKED_OUT
end note

note bottom of Stay
Rules:
- endAt > startAt
- at least 1 cat per stay
- all cats in a stay must belong to the same owner
- no overlapping stays per cat, ignoring cancelled stays
- retained rate is null or positive; agreed amount is null or non-negative
- transfer legs are independent; waived transfer retains its captured rate
end note

note bottom of TransferRate
Exactly one canonical current row exists.
A null value means transfer pricing is unavailable.
end note

note bottom of StayCat
Each row represents one link
between a stay and a cat.
The logical key is (stay, cat).
end note

note bottom of NightlyReferenceRate
Exactly one current row exists for each fixed key.
ONE_CAT keys select 0-6, 7-14, 15-29 and
30+ nights with fallback toward shorter tiers.
TWO_CATS and THREE_PLUS_CATS ignore duration.
A null rate means unavailable; Stay retains
only the resolved amount, not its source key.
end note

note bottom of NightlyReferenceRateChange
Append-only audit snapshot.
Exactly one of previous/new may be null,
and a transition must change the value.
end note

note bottom of StayPricingDecision
Append-only pricing confirmation.
stayId is indexed evidence, not an
operational Stay relationship, so it
survives deletion of the stay.
end note

note bottom of StayAgreedAmountCorrection
Append-only administrative correction.
stayId is indexed evidence, not an
operational Stay relationship. A nullable
previous amount supports explicit legacy
initialization. Reason is always required.
end note

note bottom of StayPayment
Operational history retained on stay reads.
Only amount may change; annulment is terminal.
Active totals and balances are response-derived.
end note

note bottom of StayPaymentEdit
Append-only amount-correction evidence.
stayId and paymentId are indexed scalar
identities, not operational relationships.
end note

note bottom of StayPaymentAnnulment
Append-only terminal-action evidence.
One annulment is allowed per payment.
Scalar identities survive operational deletion.
end note

@enduml
